<resources>
    <string name="app_name">Couket</string>
    <string name="company_name">NUKE200PR SOLUTIONS</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="signup_new">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_link">Send Reset Link</string>
    <string name="reset_password">Reset Password</string>
    <string name="my_stats">My Stats</string>
    <string name="home">Home</string>
    <string name="contests_participated">Contests Participated</string>
    <string name="contests_won">Contests Won</string>
    <string name="coupons_sold">Coupons Sold</string>
    <string name="coupons_bought">Coupons Bought</string>
    <string name="OpenDrawer">Drawer is open</string>
    <string name="CloseDrawer">Drawer is closed.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="no_internet">NO INTERNET CONNECTION</string>
    <string name="user_created_successfully">User Created Successfully</string>
    <string name="failed_to_update_user_details">Failed to update User Details</string>
    <string name="failed_to_signup">Failed to Signup:%1$s</string>
    <string name="logout">Logout</string>
    <string name="buy_coupons">Click Here To Buy Coupons</string>
    <string name="coupon_disclaimer">Coupons can be put up for selling by entering the details after clicking the plus sign . To buy coupons click on the blue button. All the available coupons according to the present date will be displayed if available.Coupons placed will be removed after 7 hours of being placed.</string>
    <string name="explore">Explore</string>
    <string name="coupon_type">Coupon Type</string>
    <string name="coupon_price">Price</string>
    <string name="coupon_date">Date</string>
    <string name="coupon_seller">Seller Name</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="allow_calls">Allow Calls</string>
    <string name="sent_custom_notification">Custom Notification</string>
    <string name="done">Done</string>
    <string name="sell_coupon">Sell Coupon</string>
    <string name="chats_empty">Chats appear here.</string>
    <string name="chill">Please Wait....</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_fetch_chatList">Failed to fetch chat list : %1$s</string>
    <string name="my_coupons_empty">Your on sale coupons appear here.</string>
    <string name="sold">Sold</string>
    <string name="remove">Remove</string>
    <string name="sell_request_failed">Sell Request Failed.Remove earlier coupons.</string>
    <string name="posted">Posted</string>
    <string name="post_another">Post Another</string>
    <string name="go_to_home">Go To Home</string>
    <string name="chat_and_remove">Coupons put up for selling can be removed from my coupons . Chats send by buyers can be seen by clicking the button below.Coupons placed will be removed after 7 hours .</string>
    <string name="chat_with_buyers">Chat with buyers</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coupon_removed_successfully">Coupon removed successfully</string>
    <string name="coupon_remove_failure">Coupon removing failed</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="not_able_to_make_calls">WILL NOT BE ABLE TO MAKE CALLS</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="failed_to_send_message">Failed to send Message:%1$s</string>
    <string name="message_sent_successfully">Message Sent Successfully</string>
    <string name="failed_add_device_token">Failed To Add Device Token</string>
    <string name="notification_sent">Notification Sent</string>
    <string name="failed_to_send_notification">Failed to send notification :%1$s</string>
    <string name="something_went_wrong">Something Went wrong : %1$s</string>
    <string name="message_deleted_successfully">Message Deleted Successfully</string>
    <string name="failed_to_delete_message">Failed to delete message:%1$s</string>
    <string name="permission_required">Access permission is required</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="failure_to_upload">Failed to upload file:%1$s</string>
    <string name="download_progress">Downloading  %1$s (%2$s %%)</string>
    <string name="share_with">Share with...</string>
    <string name="file_downlaoded_successfully">Download Successfull</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download :%1$s</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="failed_to_fetch_friend">Failed to fetch friend list :%1$s</string>
    <string name="loading">Loading</string>
    <string name="chat_empty">Chat Empty</string>
    <string name="reset_password_instructions">Mail sent to : %1$s , Check spam folder.</string>
    <string name="retry_mail">RETRY</string>
    <string name="close_mail">CLOSE</string>
    <string name="sending_email_failed">Email sending failed!:%1$s</string>
    <string name="resend_timer">Resend in :%1$s</string>
    <string name="email_does_not_exist">Entered email does not exist. Check and try again</string>
    <string name="password_change_failed">Failed to change password</string>
    <string name="password_update_success">Password updated successfully</string>
    <string name="confirm_password_not_equal_to_password">Confirm Password and Password not equal</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="save_profile">Save</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="user_profile">PROFILE</string>
    <string name="failed_to_update_profile">Failed to update profile</string>
    <string name="coupon_limit">Coupon selling limit is 5</string>
    <string name="stats">Stats</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="block">Block</string>
    <string name="unlike">Unlike</string>
    <string name="undislike">Remove Dislike</string>
    <string name="unblock">Unblock</string>
    <string name="send_notification">Send</string>
    <string name="chat_notifications">Chat Notifications</string>
    <string name="coupon_notifications">Coupon Notifications</string>
    <string name="founder">Prakhar Maurya 1st Year CSE : Developer</string>
    <string name="founder_message">First app development project i ever took up.Constructive criticism will be appreciated.</string>
    <string name="founder2">Divyansh Verma 1st Year CSE: Designer</string>
    <string name="founder2_message">Hope you enjoy using the app.First gig as a gui designer so any type of suggestion will be revered.</string>
    <string name="special_thanks">Special thanks to
    ->Aryan Kumar MCB 1st Year
    ->Utkarsh Patel CSE 1st Year
    ->Priyanshu CSE 1st Year
    For helping us all along the way.</string>
    <string name="problem">Drop your app issues below.</string>
    <string name="send">Send</string>
    <string name="contact_email">EMAIL -> prakharmaurya1000@gmail.com</string>
    <string name="contact_number">PHONE -> </string>
    <string name="couponsSold">Coupons Sold Till date</string>
    <string name="couponsPut"> Coupons Put</string>
    <string name="coupon1">Coupon 1 expiry</string>
    <string name="coupon2">Coupon 2 expiry</string>
    <string name="coupon3">Coupon 3 expiry</string>
    <string name="likes">Likes</string>
    <string name="contestsWon">Contests Won</string>
    <string name="money_earned">Money Earned</string>
    <string name="news_empty">Nothing to show</string>
    <string name="news_title">News Title</string>
    <string name="news_time">News Time</string>
    <string name="news_content">News Content</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="question_no">QUESTION NO:</string>
    <string name="submit">Submit</string>
    <string name="coupon_empty">Coupon lene aaye ho?Wo toh khatam ho gaye.</string>
    <string name="view_result">View Result</string>
    <string name="name">USERNAME</string>
    <string name="couket_name">COUKET</string>
    <string name="no_chats">NO CHATS TO FETCH</string>
    <string name="encrypted">ENCRYPTED</string>

</resources>