<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="334dp"
        android:layout_height="594dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/question_no"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/question_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="2" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivQuestion"
                android:layout_width="match_parent"
                android:layout_height="321dp"
                tools:srcCompat="@tools:sample/avatars" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c" />

                <RadioButton
                    android:id="@+id/option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/d" />
            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>