<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_loded"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivNews"
                android:layout_width="match_parent"
                android:layout_height="313dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/news_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/news_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/news_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/news_time"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/news_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/news_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>